fix(PhotoDetails): update link color for improved visibility in menu

--- a/src/styles/photoDetails.css
+++ b/src/styles/photoDetails.css
@@ -137,6 +137,10 @@
     font-family: "Orbitron", system-ui;
     font-size: 2rem;
     text-decoration: none;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.menu-container-2 a:hover {
     color: rgba(0, 0, 0, 0.7);
 }
 
